fixed footer margins, card font size, search imput button and filter spacing

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,7 +3,8 @@
 }
 
 .form-style {
-  font-size: 15px;
+  font-size: 14px;
+  color:#58370E;
   height: 35px;
   margin: 0 6px;
 }
@@ -19,4 +20,11 @@ select:focus {
 
 .form-control {
   width: 280px;
+  border-radius: 5px;
+}
+
+.text-muted {
+  --bs-text-opacity: 1;
+  color: #58370E !important;
+  border-radius: 5px;
 }
